--- a/app/src/main/res/layout/activity_free_list_record.xml
+++ b/app/src/main/res/layout/activity_free_list_record.xml
@@ -4,22 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/freeItemActivity"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
+    android:background="#2B292B"
     tools:context=".presentation.MainActivity">
+
+    <ImageView
+        android:id="@+id/freeAppImage"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/tvName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:text="TextView"
+        android:textColor="#4CAF50"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/freeAppImage"
+        app:layout_constraintTop_toTopOf="@+id/freeAppImage" />
 
 
     <TextView
@@ -28,7 +40,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textAlignment="viewEnd"
+        android:textAlignment="viewStart"
+        android:textColor="#9E7C6B"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/tvName"
         app:layout_constraintStart_toStartOf="@+id/tvName"
@@ -39,19 +52,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/tvArtist"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvArtist"
-        app:layout_constraintTop_toBottomOf="@+id/tvArtist"
+        app:layout_constraintStart_toStartOf="@+id/freeAppImage"
+        app:layout_constraintTop_toBottomOf="@+id/freeAppImage"
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/tvSummary"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:scrollbars="vertical"
+            android:textColor="#F6CBCB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tvArtist"
             app:layout_constraintHorizontal_bias="0.0"
