--- a/app/src/main/res/layout/activity_paid_list_record.xml
+++ b/app/src/main/res/layout/activity_paid_list_record.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="TextView"
-        android:textColor="#F44336"
+        android:text="Title"
+        android:textColor="#BA271C"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,12 +26,14 @@
 
     <TextView
         android:id="@+id/tvSummary"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:scrollbars="vertical"
-        android:text="TextView"
+        android:text="Summary ⇓"
         android:textColor="#F6CBCB"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/paidAppImage"
         app:layout_constraintTop_toBottomOf="@+id/paidAppImage" />
 
@@ -40,9 +42,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Artist"
         android:textAlignment="viewStart"
-        android:textColor="#3F51B5"
+        android:textColor="#DCA184"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,9 +56,9 @@
         android:id="@+id/tvPrice"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Price$"
         android:textAlignment="viewEnd"
-        android:textColor="#1B5E20"
+        android:textColor="#00FF13"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="@+id/tvArtist"
@@ -69,13 +71,26 @@
         android:id="@+id/paidAppImage"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvPosition"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_launcher_background" />
+
+    <TextView
+        android:id="@+id/tvPosition"
+        android:layout_width="25dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="10"
+        android:textAlignment="center"
+        android:textColor="#A8A6A6"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@+id/paidAppImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
